deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: my-app
    owner: IlyaBikmetov
spec:
  replicas: 3
  selector:
    matchLabels:
      project: proj
  template:
    metadata:
      labels:
        project: proj
    spec:
      containers:
        - name : proj-web
          image: ilyabikmetov/microservices:1.0
          ports:
            - containerPort: 8000
          readinessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
